<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.example</groupId>
    <artifactId>jsf-refresher-demo</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>war</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>
        <jakartaee.version>10.0.0</jakartaee.version>
        <wildfly.plugin.version>5.1.5.Final</wildfly.plugin.version>
        <wildfly.datasources.galleon-pack.version>10.0.0.Final</wildfly.datasources.galleon-pack.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Arquillian: integration tests -->
            <dependency>
                <groupId>org.jboss.arquillian</groupId>
                <artifactId>arquillian-bom</artifactId>
                <version>1.9.1.Final</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- WildFly provides Jakarta EE APIs at runtime -->
        <!-- 'web' profile: no JMS -->
        <dependency>
            <groupId>jakarta.platform</groupId>
            <artifactId>jakarta.jakartaee-web-api</artifactId>
            <!--artifactId>jakarta.jakartaee-api</artifactId-->
            <version>${jakartaee.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- PrimeFaces -->
        <dependency>
            <groupId>org.primefaces</groupId>
            <artifactId>primefaces</artifactId>
            <version>14.0.0</version>
            <classifier>jakarta</classifier>
        </dependency>
        <!-- Test dependencies -->
        <!-- JUnit 5 -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.11.3</version>
            <scope>test</scope>
        </dependency>
        <!-- Mockito -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.14.2</version>
            <scope>test</scope>
        </dependency>
        <!-- bridge Mockito-JUnit 5 -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>5.14.2</version>
            <scope>test</scope>
        </dependency>

        <!-- Arquillian + JUnit 5 -->
        <dependency>
            <groupId>org.jboss.arquillian.junit5</groupId>
            <artifactId>arquillian-junit5-container</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- WildFly managed container adapter -->
        <dependency>
            <groupId>org.wildfly.arquillian</groupId>
            <artifactId>wildfly-arquillian-container-managed</artifactId>
            <version>5.1.0.Beta4</version>
            <scope>test</scope>
        </dependency>
        <!-- ShrinkWrap resolver (to include Maven dependencies in the test deployment) -->
        <dependency>
            <groupId>org.jboss.shrinkwrap.resolver</groupId>
            <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
            <!-- not covered by Arquillian BOM => needs explicit version -->
            <version>3.3.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <!-- compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                </configuration>
            </plugin>

            <!-- war -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>3.4.0</version>
                <configuration>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                </configuration>
            </plugin>

            <!-- Optional: build an executable WildFly bootable JAR -->
            <plugin>
                <groupId>org.wildfly.plugins</groupId>
                <artifactId>wildfly-maven-plugin</artifactId>
                <version>${wildfly.plugin.version}</version>
                <configuration>
                    <feature-packs>
                        <feature-pack>
                            <location>wildfly@maven(org.jboss.universe:community-universe)</location>
                        </feature-pack>
                        <feature-pack>
                            <location>org.wildfly:wildfly-datasources-galleon-pack:${wildfly.datasources.galleon-pack.version}</location>
                        </feature-pack>
                    </feature-packs>
                    <layers>
                        <layer>jsf</layer>
                        <layer>jpa</layer>
                        <layer>ee-security</layer>
                        <layer>postgresql-datasource</layer>
                        <!-- required to run wildfly through maven plugin and avoid plugin start check timeout (wildfly start) -->
                        <layer>management</layer>
                        <layer>jaxrs</layer>
                    </layers>
                    <packaging-scripts>
                        <packaging-script>
                            <scripts>
                                <script>src/main/scripts/configure-security.cli</script>
                            </scripts>
                        </packaging-script>
                    </packaging-scripts>
                    <env>
                        <!-- Wildfly will look for these System Properties or Env Vars at runtime -->
                        <POSTGRESQL_USER>${env.DB_USER}</POSTGRESQL_USER>
                        <POSTGRESQL_PASSWORD>${env.DB_PASSWORD}</POSTGRESQL_PASSWORD>
                        <POSTGRESQL_HOST>${env.DB_HOST}</POSTGRESQL_HOST>
                        <POSTGRESQL_PORT>${env.DB_PORT}</POSTGRESQL_PORT>
                        <POSTGRESQL_DATABASE>${env.DB_NAME}</POSTGRESQL_DATABASE>
                    </env>
                    <!--env>
                        <POSTGRESQL_USER>jsf_user</POSTGRESQL_USER>
                        <POSTGRESQL_PASSWORD>jsf_pass</POSTGRESQL_PASSWORD>
                        <POSTGRESQL_HOST>localhost</POSTGRESQL_HOST>
                        <POSTGRESQL_PORT>5432</POSTGRESQL_PORT>
                        <POSTGRESQL_DATABASE>jsf_demo</POSTGRESQL_DATABASE>
                    </env-->
                    <bootable-jar>true</bootable-jar>
                    <bootable-jar-name>${project.artifactId}-bootable.jar</bootable-jar-name>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>package</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- Surefire: run JUnit tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.2</version>
                <configuration>
                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
            <!-- Failsafe: run Arquillian/JUnit integration tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.5.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
